# VisionStream-CPP

./: README.md
TestTaskCamera/: CMakeLists.txt  main.cpp
